fix : image alignment

--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 body{
     text-align:center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-image: url(/images/invest6.svg);
+    background-image: url(/images/invest7.svg);
      font-size: large;
    
      background-repeat: no-repeat;
-     background-position: right;
+     background-position: left top;
  }
      
 
